--- a/visualization/Visualization.ipynb
+++ b/visualization/Visualization.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "726b90e1-d0c7-4efb-bd77-a9c62c9069ee",
    "metadata": {},
    "outputs": [],
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "22fc4727-f788-4365-b4bc-ebcc5d67ec64",
    "metadata": {},
    "outputs": [],
@@ -50,9 +50,7 @@
   {
    "cell_type": "markdown",
    "id": "b2cc9d19-121f-46ac-9b49-3f40ad6c4829",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 🔹 Booking Performance"
    ]
@@ -60,17 +58,37 @@
   {
    "cell_type": "markdown",
    "id": "992c8f76-a513-42ce-83a8-17f27e3b6c99",
-   "metadata": {},
+   "metadata": {
+    "jp-MarkdownHeadingCollapsed": true
+   },
    "source": [
     "### 1. How many total bookings were made, and how many were successful vs cancelled vs incomplete?"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "e8cb7e2f-4346-49d6-9108-0b70ab3c3a3d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'Time', 'Booking_ID', 'Booking_Status', 'Customer_ID',\n",
+       "       'Vehicle_Type', 'Pickup_Location', 'Drop_Location', 'Avg_VTAT',\n",
+       "       'Avg_CTAT', 'Cancelled_Rides_by_Customer',\n",
+       "       'Reason_for_cancelling_by_Customer', 'Cancelled_Rides_by_Driver',\n",
+       "       'Driver_Cancel_Reason', 'Incomplete_Rides', 'Incomplete_Rides_Reason',\n",
+       "       'Booking_Value', 'Payment_Method', 'Ride_Distance', 'Driver_Ratings',\n",
+       "       'Customer_Rating'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": []
   },
   {
@@ -100,9 +118,7 @@
   {
    "cell_type": "markdown",
    "id": "a65c0450-ded4-46eb-93ba-e670947203e7",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "\n",
     "## 🔹 Revenue & Value Analysis\n",
@@ -157,9 +173,7 @@
   {
    "cell_type": "markdown",
    "id": "76d19658-acaf-498f-a9a3-28bdb8471e8c",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 🔹 Vehicle & Ride Analysis"
    ]
@@ -199,9 +213,7 @@
   {
    "cell_type": "markdown",
    "id": "ade60e7f-9daf-4a74-93a8-0c5a69a3a18b",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 🔹 Customer Behavior Analysis"
    ]
@@ -321,9 +333,7 @@
   {
    "cell_type": "markdown",
    "id": "3d962ef8-b749-4a28-8027-f1d4e56d12e9",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 🔹 Payment Behavior"
    ]
@@ -355,9 +365,7 @@
   {
    "cell_type": "markdown",
    "id": "9022c525-545b-4297-b57b-7355f7e4a2a6",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 🔹 Incomplete Ride Analysis"
    ]
@@ -389,9 +397,7 @@
   {
    "cell_type": "markdown",
    "id": "d23892a4-55fb-4fc8-9cc0-1258b76dfa27",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "## 🔹 Advanced / Dashboard-Level Questions"
    ]
