--- a/analysis/Data analysis using sql.ipynb
+++ b/analysis/Data analysis using sql.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "cb994e2b-d05d-4d17-b64b-a52d3a70f7eb",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
     "    \"host\":\"localhost\",\n",
     "    \"user\":\"root\",\n",
     "    \"password\":\"12345678\",\n",
-    "    \"database\":\"Ola_data\",\n",
+    "    \"database\":\"KOla_data\",\n",
     "    \"port\":\"3306\"\n",
     "}\n"
    ]
